# cvtease

./: .gitignore  MANIFEST.in  README.md  install.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yaml
MD/: decent_facial_landmark_detection.md
cvtease/: cli.py  gui.py  recoface.py
cvtease/data/: eyeAftjson.json
cvtease/function/: eyeAft.py
cvtease/style/: style.py
funny_face/: game.py
tests/: test_cli.py
